--- a/src/assets/lang/sp.json
+++ b/src/assets/lang/sp.json
@@ -36,7 +36,7 @@
   "404": "404",
   "add-new": "Añadir nuevo",
   "overview": "Resumen",
-  "invoices": "Facturas",
+  "orders": "Ordenes",
   "users": "Usuarios",
   "welcome-back" : "Bienvenido de nuevo",
   "login-to-continue" : "Inicia sesión para continuar",
@@ -70,5 +70,36 @@
   "phone" : "Teléfono",
   "enter-phone" : "Introduce el teléfono",
   "actions" : "Acciones",
-  "select-option" : "Seleccionar opción"
+  "select-option" : "Seleccionar opción",
+  "new-order" : "Nueva Orden",
+  "no-orders-fund" : "No hay Ordenes disponibles, crea una nueva",
+  "search-for-provider" : "Buscar por proveedor",
+  "order-list" : "Lista de Ordenes",
+  "search-for-name" : "Buscar por nombre",
+  "delete" : "Eliminar",
+  "add-item" : "Añadir artículo",
+  "order-number" : "Número de Orden",
+  "total-amount" : "Monto total",
+  "provider" : "Proveedor",
+  "created-at" : "Creado el",
+  "payment-details" : "Detalles de pago",
+  "payment-method" : "Método de pago",
+  "bank": "Banco",
+  "reference" : "Referencia",
+  "account-number" : "Número de cuenta",
+  "item-name" : "Nombre del artículo",
+  "price-per-unit" : "Precio por unidad",
+  "quantity" : "Cantidad",
+  "total" : "Total",
+  "provider-list" : "Lista de proveedores",
+  "edit-provider" : "Editar proveedor",
+  "cancel" : "Cancelar",
+  "update" : "Actualizar",
+  "add": "Registrar",
+  "add-order" : "Añadir Orden",
+  "order-details" : "Detalles de la Orden",
+  "save" : "Guardar",
+  "exempt" : "Exento",
+  "tax" : "Impuesto",
+  "subtotal" : "Subtotal"
 }
