Inputs and 2 word files
- Added order inputs and 2 word files.
- Fixed textarea to get v-model

--- a/src/assets/lang/sp.json
+++ b/src/assets/lang/sp.json
@@ -101,5 +101,8 @@
   "save" : "Guardar",
   "exempt" : "Exento",
   "tax" : "Impuesto",
-  "subtotal" : "Subtotal"
+  "subtotal" : "Subtotal",
+  "payment-order" : "Orden de Pago",
+  "payment-description" : "Descripción del Pago",
+  "products" : "Productos"
 }
